[tool.poetry]
name = "mikan-card-downloader"
version = "3.1.0"
description = "Downloads cards and stills from SIFAS and SIF."
authors = ["DemonicSavage"]
license = "GPLv3"
packages = [
    {include = "mikan", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
aiohttp = {version = "^3.9.0", extras = ["speedups"]}
lxml = "^5.0.0"
tqdm = "^4.64.0"
platformdirs = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pre-commit = "^3.0.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.8.2"
mypy = "^1.0.0"
types-beautifulsoup4 = "^4.11.4"
types-tqdm = "^4.65.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"
vcrpy = "^5.1.0"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
mikan = "mikan.main:main"

[tool.mypy]
strict = true
exclude = ["test/"]

[tool.ruff]
exclude = ["test"]
ignore = []
line-length = 120
select = [
    "E","F","W","I","N","C90","S","PL","B","A","C4","SIM","ARG","PT","PERF","RUF"
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
